--- a/package.json
+++ b/package.json
@@ -3,18 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@antv/g2": "^4.1.49",
+    "@antv/g6": "^4.6.4",
+    "@antv/l7plot": "0.0.5",
+    "@antv/s2": "^1.11.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.16.12",
+    "axios": "^0.24.0",
+    "babel-plugin-import": "^1.13.3",
+    "customize-cra": "^1.0.0",
+    "d3": "^5.0.0",
+    "echarts": "^5.3.0",
+    "force-in-a-box": "^1.0.1",
+    "leaflet": "^1.7.1",
+    "leaflet-arrowheads": "^1.4.0",
+    "leaflet-dvf": "^0.3.1",
+    "leaflet-geotiff-2": "^1.1.0",
+    "leaflet-webgl-heatmap": "^0.2.6",
+    "leaflet.heat": "^0.2.0",
+    "postcss-loader": "^6.2.1",
+    "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
