--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/turf": "^6.5.0",
     "antd": "^4.16.12",
     "axios": "^0.24.0",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
-    "d3": "^5.0.0",
+    "d3": "^7.6.1",
     "echarts": "^5.3.0",
     "force-in-a-box": "^1.0.1",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.0.0",
     "leaflet-arrowheads": "^1.4.0",
-    "leaflet-dvf": "^0.3.1",
+    "leaflet-dvf": "^0.3.0",
     "leaflet-geotiff-2": "^1.1.0",
     "leaflet-webgl-heatmap": "^0.2.6",
     "leaflet.heat": "^0.2.0",
